[gd_scene load_steps=16 format=2]

[ext_resource path="res://animations/cutscenes/cutscene7.anim" type="Animation" id=1]
[ext_resource path="res://scenes/parllax_bg_6.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/robot_demo.png" type="Texture" id=3]
[ext_resource path="res://textures/robot_demo_2.png" type="Texture" id=4]
[ext_resource path="res://textures/Tiles/Science Fiction/Board 1.png" type="Texture" id=5]
[ext_resource path="res://textures/Tiles/Science Fiction/Pillars 1.png" type="Texture" id=6]
[ext_resource path="res://textures/Tiles/Science Fiction/Door 2.png" type="Texture" id=7]
[ext_resource path="res://textures/Tiles/Science Fiction/CryoBox.png" type="Texture" id=8]
[ext_resource path="res://scenes/parallax_bg2.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/parallax_bg.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/parllax_bg_5.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/parllax_bg_3.tscn" type="PackedScene" id=12]
[ext_resource path="res://animations/cutscenes/cutscene7.gd" type="Script" id=13]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=14]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=15]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_horizontal_guides_": [ -1.26346 ],
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="CryoBox" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 382.762, 359.354 )
scale = Vector2( 2.74375, 1.86697 )
texture = ExtResource( 8 )

[node name="Pillars 1" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 291.876, 349.9 )
scale = Vector2( 2.74375, 1.86697 )
texture = ExtResource( 6 )

[node name="Board 1" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 387.656, 285.837 )
scale = Vector2( 2.74375, 1.86697 )
texture = ExtResource( 5 )

[node name="Door 2" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 943.251, 354.4 )
scale = Vector2( 2.74375, 1.86697 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 452.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -133.0
custom_fonts/font = ExtResource( 14 )
text = "KEY_CUT_7_1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cutscene7"
playback_speed = 0.3
anims/cutscene7 = ExtResource( 1 )

[node name="robot_demo" type="Sprite" parent="."]
position = Vector2( 284.001, 422.877 )
texture = ExtResource( 3 )
vframes = 2
hframes = 16
frame = 16

[node name="robot_demo_2" type="Sprite" parent="."]
position = Vector2( 216.501, 422.877 )
texture = ExtResource( 4 )
vframes = 2
hframes = 16

[node name="parallax_bg" parent="." instance=ExtResource( 12 )]
scale = Vector2( 0, 0 )
transform = Transform2D( 0, 0, 0, 0, 0, 0 )

[node name="ParallaxBackground2" parent="." instance=ExtResource( 11 )]
scale = Vector2( 0, 0 )
transform = Transform2D( 0, 0, 0, 0, 0, 0 )

[node name="parallax_bg2" parent="." instance=ExtResource( 10 )]
scale = Vector2( 0, 0 )
transform = Transform2D( 0, 0, 0, 0, 0, 0 )

[node name="parallax_bg3" parent="." instance=ExtResource( 9 )]
scale = Vector2( 0, 0 )
transform = Transform2D( 0, 0, 0, 0, 0, 0 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -7.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 15 )
text = "Skip"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
